# cyklon

./: .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  components.json  nx.json  package-lock.json  package.json  swap.r1cs  swap.sym  swap_final.zkey  tsconfig.base.json  verification_key.json
anchor/: Anchor.toml  package-lock.json  package.json  solana-init-ledger-script.sh  tsconfig.spec.json
anchor/programs/cyklon/: Cargo.toml
anchor/programs/cyklon/src/: errors.rs  events.rs  lib.rs  solana-clmm-dex (1).rs  solana-clmm-dex (2).rs  solana-clmm-dex (3).rs
anchor/programs/cyklon/src/constants/: mod.rs  verifying_key.rs
anchor/programs/cyklon/src/instructions/: add_liquidity.rs  confidential_swap.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  upgrade_pool.rs
anchor/programs/cyklon/src/state/: mod.rs  pool.rs
anchor/programs/cyklon/src/tests/: groth16.rs  zk_proof_output.json
anchor/programs/darklake/: Cargo.toml
anchor/programs/darklake/src/: lib.rs
anchor/programs/darklake/src/constants/: verifying_key.rs
anchor/programs/darklake/src/instructions/: add_liquidity.rs  confidential_swap.rs
anchor/programs/darklake/src/state/: pool.rs
anchor/programs/darklake/src/tests/: zk_proof_output.json
circuits/: division.circom  division_test.circom  swap.circom  swap.circom.txt  swap.r1cs  swap.sym  swap_0001.zkey  verification_key.json
docs/: Add Liquidity-2024-08-27-174533.mmd  Confidential Swaps-2024-08-27-174527.mmd
swap_js/: swap.wasm
web/: components.json  instrumentation.ts  next.config.js  sentry.client.config.ts  utils.ts  (+2 more)
(+75 files in other folders)
