[package]
name = "cyklon"
version = "0.1.0"
description = "Cyklon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cyklon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
sha3 = "0.10.0"
groth16-solana = "0.0.3"
solana-program = "2.0.1"

[dev-dependencies]
serde_json = "1.0"
