[package]
name = "darklake"
version = "0.1.0"
description = "Darklake"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darklake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
groth16-solana = "0.0.3"
solana-program = "2.0.1"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
serde_json = "1.0"
